force-app/main/default/objects/Reseller_Sales__c/Reseller_Sales__c.object-meta.xml
<CustomObject>
    <label>Reseller Sale</label>
    <nameField>
        <label>Reseller Sales Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reseller Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>