force-app/main/default/objects/Reseller_Sales__c/fields/Added_Special_SPIFF_Number__c.field-meta.xml
<CustomField>
    <fullName>Added_Special_SPIFF_Number__c</fullName>
    <formula>Added_Special_SPIF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Added Special SPIFF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>