force-app/main/default/objects/Reseller_Sales__c/fields/Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Change_Request__c</fullName>
    <label>Change Request</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>