force-app/main/default/objects/Reseller_Sales__c/fields/Distributor_Ids__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Ids__c</fullName>
    <label>Distributor Id(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>