force-app/main/default/objects/Reseller_Sales__c/fields/DistributorText__c.field-meta.xml
<CustomField>
    <fullName>DistributorText__c</fullName>
    <label>DistributorText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>