force-app/main/default/objects/Reseller_Sales__c/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <description>formula in case the look up field is blank, will llook at text field</description>
    <formula>if(not(isblank( End_User__r.Name )),End_User__r.Name, End_User_Text__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Customer</label>
    <type>Text</type>
</CustomField>