force-app/main/default/objects/Reseller_Sales__c/fields/End_User__c.field-meta.xml
<CustomField>
    <fullName>End_User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>End User</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reseller Sales Data (End User)</relationshipLabel>
    <relationshipName>Reseller_Sales_Data_EU</relationshipName>
    <type>Lookup</type>
</CustomField>