force-app/main/default/objects/Reseller_Sales__c/fields/End_User_Contact__c.field-meta.xml
<CustomField>
    <fullName>End_User_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End User Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resller Sales Data (End User Contact)</relationshipLabel>
    <relationshipName>Resller_Sales_Data_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>