force-app/main/default/objects/Reseller_Sales__c/fields/End_User_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>End_User_Contact_Last_Name__c</fullName>
    <label>End User Contact Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>