force-app/main/default/objects/Reseller_Sales__c/fields/End_User_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>End_User_Postal_Code__c</fullName>
    <label>End User Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>