force-app/main/default/objects/Reseller_Sales__c/fields/End_User_Street__c.field-meta.xml
<CustomField>
    <fullName>End_User_Street__c</fullName>
    <label>End User Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>