force-app/main/default/objects/Reseller_Sales__c/fields/inEligible_Spiff__c.field-meta.xml
<CustomField>
    <fullName>inEligible_Spiff__c</fullName>
    <formula>Spa_Product__r.Spiff_Excluded__c ||  Spa_Product__r.Quote.Spiff_InEligible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>inEligible Spiff</label>
    <type>Checkbox</type>
</CustomField>