force-app/main/default/objects/Reseller_Sales__c/fields/Legacy_Spiff_Claim_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Spiff_Claim_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Spiff Claim Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>