force-app/main/default/objects/Reseller_Sales__c/fields/LegacyClaimNumber__c.field-meta.xml
<CustomField>
    <fullName>LegacyClaimNumber__c</fullName>
    <externalId>true</externalId>
    <label>LegacyClaimNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>