force-app/main/default/objects/Reseller_Sales__c/fields/legacySpiffPaymentNumber__c.field-meta.xml
<CustomField>
    <fullName>legacySpiffPaymentNumber__c</fullName>
    <label>legacySpiffPaymentNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>