force-app/main/default/objects/Reseller_Sales__c/fields/LegacySubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>LegacySubmissionDate__c</fullName>
    <label>LegacySubmissionDate</label>
    <type>Date</type>
</CustomField>