force-app/main/default/objects/Reseller_Sales__c/fields/More_Info_Date__c.field-meta.xml
<CustomField>
    <fullName>More_Info_Date__c</fullName>
    <label>More Info Date</label>
    <type>Date</type>
</CustomField>