force-app/main/default/objects/Reseller_Sales__c/fields/Notes_or_Serial_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Notes_or_Serial_Numbers__c</fullName>
    <inlineHelpText>You can add serial numbers if you like but we will likely be able to find the sales without serial numbers.</inlineHelpText>
    <label>Notes or Serial Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>