force-app/main/default/objects/Reseller_Sales__c/fields/Partner_Country__c.field-meta.xml
<CustomField>
    <fullName>Partner_Country__c</fullName>
    <formula>Requester__r.Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Country</label>
    <type>Text</type>
</CustomField>