force-app/main/default/objects/Reseller_Sales__c/fields/Payment_Ref__c.field-meta.xml
<CustomField>
    <fullName>Payment_Ref__c</fullName>
    <formula>if(isblank(Spiff_Claim_Payment__c) &amp;&amp; isblank(legacySpiffPaymentNumber__c),&apos;&apos;,
if(not(isblank( Spiff_Claim_Payment__r.finofferNumber__c))&amp;&amp; not(isblank(Spiff_Claim_Payment__c)) ,
text(Spiff_Claim_Payment__r.finofferNumber__c), 
if(not(isblank(legacySpiffPaymentNumber__c)),legacySpiffPaymentNumber__c,
Spiff_Claim_Payment__r.pmtRefAutoNumber__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Ref #</label>
    <type>Text</type>
</CustomField>