force-app/main/default/objects/Reseller_Sales__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sales Data Product</relationshipLabel>
    <relationshipName>Sales_Data_Product</relationshipName>
    <type>Lookup</type>
</CustomField>