force-app/main/default/objects/Reseller_Sales__c/fields/productLineKey__c.field-meta.xml
<CustomField>
    <fullName>productLineKey__c</fullName>
    <formula>if(Requester__r.Account.BillingCountry == &apos;Canada&apos;,text(Product__r.Family )
, &apos;All&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>productLineKey</label>
    <type>Text</type>
</CustomField>