force-app/main/default/objects/Reseller_Sales__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Requester</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SalesData Submitter</relationshipLabel>
    <relationshipName>SalesData_Submitter</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>