force-app/main/default/objects/Reseller_Sales__c/fields/Requester_Company__c.field-meta.xml
<CustomField>
    <fullName>Requester_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Requester Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SalesData Reseller</relationshipLabel>
    <relationshipName>SalesData_Reseller</relationshipName>
    <type>Lookup</type>
</CustomField>