force-app/main/default/objects/Reseller_Sales__c/fields/Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date__c</fullName>
    <label>Sale Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>