force-app/main/default/objects/Reseller_Sales__c/fields/Spa_Product__c.field-meta.xml
<CustomField>
    <fullName>Spa_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spa Product</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>ResellerSalesData Spa</relationshipLabel>
    <relationshipName>ResellerSalesData_Spa</relationshipName>
    <type>Lookup</type>
</CustomField>