force-app/main/default/objects/Reseller_Sales__c/fields/Spiff_Claim_Payment__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Claim_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spiff Claim Payment</label>
    <referenceTo>Spiff_Claim_Payment__c</referenceTo>
    <relationshipLabel>Reseller SalesData Payment</relationshipLabel>
    <relationshipName>Reseller_SalesData_Payment</relationshipName>
    <type>Lookup</type>
</CustomField>