force-app/main/default/objects/Reseller_Sales__c/fields/Spiff_Request__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spiff Request</label>
    <referenceTo>Spiff_Request__c</referenceTo>
    <relationshipLabel>Reseller Sales</relationshipLabel>
    <relationshipName>Reseller_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>