force-app/main/default/objects/Reseller_Sales__c/fields/Spiff_Type__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Type__c</fullName>
    <formula>if(not(isblank(text(  Requester__r.Account.Parent.Spiff_Type__c ))), 
text(  Requester__r.Account.Parent.Spiff_Type__c ),
text(  Requester__r.Account.Spiff_Type__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spiff Type</label>
    <type>Text</type>
</CustomField>