force-app/main/default/objects/Reseller_Sales__c/fields/Standard_SPIFF_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Standard_SPIFF_Per_Unit__c</fullName>
    <formula>Per_Unit_Spiff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard SPIFF Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>