force-app/main/default/objects/Reseller_Sales__c/fields/submissionDate__c.field-meta.xml
<CustomField>
    <fullName>submissionDate__c</fullName>
    <formula>if(not(isblank(LegacySubmissionDate__c )),LegacySubmissionDate__c, DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>submissionDate</label>
    <type>Date</type>
</CustomField>