force-app/main/default/objects/Reseller_Sales__c/fields/Total_SPIF__c.field-meta.xml
<CustomField>
    <fullName>Total_SPIF__c</fullName>
    <formula>(Per_Unit_Spiff__c +  Added_Special_SPIF__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total SPIF $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>