force-app/main/default/objects/Reseller_Sales__c/fields/userVer__c.field-meta.xml
<CustomField>
    <fullName>userVer__c</fullName>
    <formula>$User.ContactId ==  Requester__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>userVer</label>
    <type>Checkbox</type>
</CustomField>