force-app/main/default/objects/Reseller_Sales__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>End_Customer__c</columns>
    <columns>Status__c</columns>
    <columns>Sale_Date__c</columns>
    <columns>Distributor__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>