force-app/main/default/objects/Reseller_Sales__c/listViews/Paid_Spiff_Requests.listView-meta.xml
<ListView>
    <fullName>Paid_Spiff_Requests</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Sale_Date__c</columns>
    <columns>End_Customer__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Distributor_Name_s__c</columns>
    <columns>Payment_Ref__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <label>Paid Spiff Requests</label>
    <language>en_US</language>
</ListView>